--- a/index.html
+++ b/index.html
@@ -26,8 +26,8 @@
             </ul>
         </nav>
     </header>
-    <!--removed div and replaced with figure element and provided an alt attribute to the image-->
-    <figure class="hero" alt="a team of four people collaborating on a project around a table." ></figure>
+    <!--removed div and replaced with figure element and alt attribute-->
+    <figure class="hero" alt="a group of people around a table." ></figure>
     <!--removed div and replaced with main element-->
     <main class="content">
         <!--removed all divs in the main element and replaced with section-->
@@ -39,8 +39,8 @@
                 The dominance of mobile internet use means that users are searching for the right business as they travel, shop, or sit on their couch at home. Search Engine Optimization (SEO) allows you to increase your visibility and find the right customers for your business.
             </p>
         </section>
-        <section id="online-reputation-management" class="online-reputation-management"><!--provided alt attribute to the image-->
-
+        <section id="online-reputation-management" class="online-reputation-management">
+            <!--provided alt attribute to the image-->
             <img src="./assets/images/online-reputation-management.jpg" class="float-right"alt="a person working on a laptop with a screen showing graphs on a page with a header of Reputation" />
             <h2>Online Reputation Management</h2>
             <p>
