reformatted header nav

--- a/index.html
+++ b/index.html
@@ -10,18 +10,18 @@
 
 <body>
     <!--Removed divs and added header and nav elements-->
-    <header>
+    <header id="line">
         <h1>Hori<span class="seo">seo</span>n</h1>
         <nav>
             <ul>
-                <li>
-                    <a href="#search-engine-optimization">Search Engine Optimization</a>
+                <li class="word ">
+                    <a href="#search-engine-optimization">Search Engine Optimization &emsp13;</a>
                 </li>
-                <li>
-                    <a href="#online-reputation-management">Online Reputation Management</a>
+                <li class="word">
+                    <a href="#online-reputation-management">Online Reputation Management &emsp13;</a>
                 </li>
-                <li>
-                    <a href="#social-media-marketing">Social Media Marketing</a>
+                <li class="word">
+                    <a href="#social-media-marketing">Social Media Marketing &emsp13;</a>
                 </li>
             </ul>
         </nav>
