made updates to html

--- a/index.html
+++ b/index.html
@@ -31,7 +31,8 @@
     <!--removed div and replaced with main element-->
     <main class="content">
         <!--removed all divs in the main element and replaced with section-->
-        <section class="search-engine-optimization">
+        <!--changed class to id for 'search-engine-optimization'-->
+        <section id="search-engine-optimization" class="search-engine-optimization">
             <!--provided an alt attritube to the image-->
             <img src="./assets/images/search-engine-optimization.jpg" class="float-left" alt="overview of a desk with a notebook in the center, with a laptop and a mug of coffee on the left and a container of markers and colored pencils on the right" />
             <h2>Search Engine Optimization</h2>
@@ -61,21 +62,22 @@
         <!--removed all divs in the aside element and replaced with section elements-->
         <section class="benefit-lead">
             <h3>Lead Generation</h3>
-            <img src="./assets/images/lead-generation.png" />
+            <!--updated alt attributes for icon images-->
+            <img src="./assets/images/lead-generation.png" alt="icon of a cog leading to a dollar sign" />
             <p>
                 Inbound strategies for lead generation require less work for your business, bringing customers directly to your website.
             </p>
         </section>
         <section class="benefit-brand">
             <h3>Brand Awareness</h3>
-            <img src="./assets/images/brand-awareness.png" />
+            <img src="./assets/images/brand-awareness.png" alt="icon of a lightbulb as a head beaconing" />
             <p>
                 Users find your business through paid and organic searches, increasing the search ranking and visibility for your business.
             </p>
         </section>
         <section class="benefit-cost">
             <h3>Cost Management</h3>
-            <img src="./assets/images/cost-management.png"></img>
+            <img src="./assets/images/cost-management.png" alt="icon of a cog with dollar signs"></img>
             <p>
                 As the search ranking for your business increases, your advertising costs decrease, and you no longer need to advertise your page.
             </p>
